tests/paczka1/fuzzy1/30555332.err
Error in line 8: 5xxrk7 A13 31,4
Error in line 26: QHnc6 A13 3,2
Error in line 22: sGN35 A13 92,4
Error in line 17: hxN S148 11,4
